--- a/index_rus.html
+++ b/index_rus.html
@@ -115,7 +115,7 @@
 						</p>
 					</div>
 					<div id="our_services">
-						 <span>На наших курсах:</span>
+						 <span>Мы предлагаем:</span>
 					</div>
 			</section>
 			<section id="block2" class="center">
@@ -144,7 +144,7 @@
 						<div class="block2_div1">
 							<div class="block2_div2">
 								<div class="block2_div_title">
-									Подготовка к сдаче TOEFL, IELTS, DaF
+									Подготовка к сдаче TOEFL, IELTS
 								</div>
 								<div class="block2_div_img">
 									<img src="images/block2/4.png">
