--- a/index_eng.html
+++ b/index_eng.html
@@ -16,10 +16,10 @@
 			<nav id="header_menu">
 				<ul id="header_menu_ul">
 					<li class="header_menu_li">
-						<a href="#block2" class="header_menu_a">ПРО КУРСИ</a>
+						<a href="#block2" class="header_menu_a">ABOUT THE COURCES</a>
 					</li>
 					<li class="header_menu_li">
-						<a href="#block8" class="header_menu_a">КОНТАКТИ ТА АДРЕСА</a>
+						<a href="#block8" class="header_menu_a">CONTACTS AND ADDRESS</a>
 					</li>
 				</ul>
 			</nav>
@@ -61,7 +61,7 @@
 						</select>
 					</nav>
 					<div id="headline">
-						<span>INTERCLASS</span> - ЦЕНТР РОЗВИТКУ МОВНОЇ КОМПЕТЕНЦІЇ
+						<span>INTERCLASS</span> - LANGUAGE COMPETENCE DEVELOPEMENT CENTER
 					</div>
 
 					<div id="features">
@@ -69,7 +69,7 @@
 					</div>
 					<div id="block1_text">
 						<p>
-							КУРСИ АНГЛІЙСЬКОЇ МОВИ У МІСТІ ХМЕЛЬНИЦЬКОМУ
+							ENGLISH LANGUAGE COURCES IN KHMELNYTSKYI
 						</p>
 					</div>
 					<div id="block1_blocks">
@@ -78,7 +78,7 @@
 								<img src="images/block1/1.png">	
 							</div>
 							<div class="block1_block_title">
-								Досвідчені викладачі з мовною практикою за кордоном.
+								Lectures with extensive experience
 							</div>
 						</div>
 						<div class="block1_block">
@@ -86,7 +86,7 @@
 								<img src="images/block1/2.png">	
 							</div>
 							<div class="block1_block_title">
-								Зручний та сучасний офіс у центрі міста.
+								Modern comfortable office in the city center
 							</div>
 						</div>
 						<div class="block1_block">
@@ -94,7 +94,7 @@
 								<img src="images/block1/3.png">	
 							</div>
 							<div class="block1_block_title">
-								Навчання в міні групах, індивідуальні заняття та консультації.
+								Small groups, tutorials and consultations
 							</div>
 						</div>
 					</div>
@@ -108,15 +108,15 @@
 						<img src="images/block2/1.png">
 					</div>
 					<div id="select_service">
-						ПРАЦЮЄМО НА РЕЗУЛЬТАТ
+						RESULT ORIENTED
 					</div>
 					<div id="block1_half_text" class="container">
 						<p>
-							Наша методика має комунікативне спрямування, що розвиває здібності користуватися мовою спонтанно. Це значною мірою сприяє подоланню психологічних бар’єрів при спілкуванні з носіями мови.
+							We practice communicative approach, which leads to fluency in language mastering. It facilitates smooth communication with English speakers and ruins psychological barriers.
 						</p>
 					</div>
 					<div id="our_services">
-						 <span>На наших курсах:</span>
+						 <span>We offer:</span>
 					</div>
 			</section>
 			<section id="block2" class="center">
@@ -125,7 +125,7 @@
 						<div class="block2_div1">
 							<div class="block2_div2">
 								<div class="block2_div_title">
-									Базовий курс англійської мови
+									English Basics
 								</div>
 								<div class="block2_div_img">
 									<img src="images/block2/2.png">
@@ -135,7 +135,7 @@
 						<div class="block2_div1">
 							<div class="block2_div2">
 								<div class="block2_div_title">
-									Інтенсивний курс англійської мови
+									Intensive English
 								</div>
 								<div class="block2_div_img">
 									<img src="images/block2/3.png">
@@ -145,7 +145,7 @@
 						<div class="block2_div1">
 							<div class="block2_div2">
 								<div class="block2_div_title">
-									Підготовка до здачі TOEFL, IELTS, DaF
+									TOEFL, IELTS preparation 
 								</div>
 								<div class="block2_div_img">
 									<img src="images/block2/4.png">
@@ -155,7 +155,7 @@
 						<div class="block2_div1">
 							<div class="block2_div2">
 								<div class="block2_div_title">
-									Підготовка до здачі ЗНО
+									A, B level exams preparation (ЗНО)
 								</div>
 								<div class="block2_div_img">
 									<img src="images/block2/5.png">
@@ -165,7 +165,7 @@
 						<div class="block2_div1">
 							<div class="block2_div2">
 								<div class="block2_div_title">
-									Курси для дітей шкільного віку 
+									English for school children 
 								</div>
 								<div class="block2_div_img">
 									<img src="images/block2/6.png">
@@ -175,7 +175,7 @@
 						<div class="block2_div1">
 							<div class="block2_div2">
 								<div class="block2_div_title">
-									Індивідуальний підхід до кожного студента
+									Individual approach to each student
 								</div>
 								<div class="block2_div_img">
 									<img src="images/block2/7.png">
@@ -185,7 +185,7 @@
 						<div class="block2_div1">
 							<div class="block2_div2">
 								<div class="block2_div_title">
-									Аудіо та відео підтримка.
+									Audio and video facilities
 								</div>
 								<div class="block2_div_img">
 									<img src="images/block2/8.png">
@@ -195,7 +195,7 @@
 						<div class="block2_div1">
 							<div class="block2_div2">
 								<div class="block2_div_title">
-									 Інтерактивні вправи та комп’ютерні тести.
+									 Interactive exercises and computer-based tests
 								</div>
 								<div class="block2_div_img">
 									<img src="images/block2/9.png">
@@ -215,34 +215,34 @@
 						<img src="images/block8/1.png">
 					</div>
 					<div id="contacts">
-						КОНТАКТИ ТА АДРЕСА
+						CONTACTS AND ADDRESS
 					</div>
 					<div id="adress_text">
 						<p>
-							Ми знаходимося у Хмельницькому, вул. Вайсера, 7, офіс 205<br>
-							Телефон: +380 (97) 951 31 35
+							We are in Khmelnytskyi, 7, Vaisera str., 205 Office<br>
+							Tel: +380 (97) 951 31 35
 						</p>
 					</div>
 					<div id="block8_form">
 						<form action="php/send_en.php" method="post" id="form8" class="form8">
 							<div id="order">
-								НАПИШІТЬ НАМ
+								TEXT US
 							</div>
 							<div id="inputs">
 								<div class="oneinput">
-									<input type="text" name="yourname" class="input8" required="required" placeholder="Ваше ім'я">
+									<input type="text" name="yourname" class="input8" required="required" placeholder="Your name">
 								</div>
 								<div class="oneinput">
-									<input type="email" name="email" class="input8" placeholder="e-mail">
+									<input type="email" name="email" class="input8" placeholder="Your e-mail">
 								</div>
 								<div class="oneinput">
-									<input type="tel" name="tel" class="input8" required="required" placeholder="Ваш тел.">
+									<input type="tel" name="tel" class="input8" required="required" placeholder="Your phone number">
 								</div>
 								<div id="big_text">
-									<textarea id="your_message" name="message" placeholder="Ваше повідомлення"></textarea>
+									<textarea id="your_message" name="message" placeholder="Your message"></textarea>
 								</div>
 								<div id="block8_btn">
-									<input type="submit" value="Надіслати" id="send">
+									<input type="submit" value="Send" id="send">
 								</div>
 							</div>
 						</form>
