--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>INTERCLASS</title>
+<meta name="description" content="Вивчення англійської мови у Хмельницькому. Найкращі курси англійської мови у Хмельницькому.">
+<title>Курси англійської мови "Interclass" у Хмельницькому. Найкращі курси англійської мови у нашому місті.</title>
 <link href="css/style.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
