--- a/index_rus.html
+++ b/index_rus.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>INTERCLASS</title>
+<meta name="description" content="Обучение английскому в Хмельницьком. Лучшие  курсы английского языка в Хмельницьком.">
+<title>Курсы английского языка "Interclass" в Хмельницком. Лучшие курсы англійского в нашем городе.</title>
 <link href="css/style.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
