--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Вивчення англійської мови у Хмельницькому. Найкращі курси англійської мови у Хмельницькому.">
+ <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <title>Курси англійської мови "Interclass" у Хмельницькому. Найкращі курси англійської мови у нашому місті.</title>
 <link href="css/style.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
