--- a/index_eng.html
+++ b/index_eng.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>English language cources "Interclass" in Khmelnytskyi.</title>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link href="css/style.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
