--- a/index_rus.html
+++ b/index_rus.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Обучение английскому в Хмельницьком. Лучшие  курсы английского языка в Хмельницьком.">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <title>Курсы английского языка "Interclass" в Хмельницком. Лучшие курсы англійского в нашем городе.</title>
 <link href="css/style.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
